// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GraphContainer component > renders with active prop set to false 1`] = `
<div
  className="___g40ym10_1arimw7 fly5x3f f1l02sjl f10pi13n f1dmdbja f1ewtqcl f1wt32pr ftac7j7 f1w0yd9v fdwcyh7 f1h0xgbp fzkkow9 fcdblym fg706s2 fjik90z fj3muxo f1akhkt f1aperda f1lxtadh"
  data-automation-id="msla-graph-container-test_container"
/>
`;

exports[`GraphContainer component > renders with default props 1`] = `
<div
  className="___g40ym10_1arimw7 fly5x3f f1l02sjl f10pi13n f1dmdbja f1ewtqcl f1wt32pr ftac7j7 f1w0yd9v fdwcyh7 f1h0xgbp fzkkow9 fcdblym fg706s2 fjik90z fj3muxo f1akhkt f1aperda f1lxtadh"
  data-automation-id="msla-graph-container-test_container"
/>
`;

exports[`GraphContainer component > renders with selected and active props 1`] = `
<div
  className="___15mjpr4_4ogwh30 fly5x3f f1l02sjl f10pi13n f1dmdbja f1ewtqcl f1wt32pr ftac7j7 f1w0yd9v fdwcyh7 f1h0xgbp fzkkow9 fcdblym fg706s2 fjik90z fc56jbi f1o6oagp fxmc7hf f1ml3t7l"
  data-automation-id="msla-graph-container-test_container"
/>
`;

exports[`GraphContainer component > renders with selected prop 1`] = `
<div
  className="___15mjpr4_4ogwh30 fly5x3f f1l02sjl f10pi13n f1dmdbja f1ewtqcl f1wt32pr ftac7j7 f1w0yd9v fdwcyh7 f1h0xgbp fzkkow9 fcdblym fg706s2 fjik90z fc56jbi f1o6oagp fxmc7hf f1ml3t7l"
  data-automation-id="msla-graph-container-test_container"
/>
`;
